[project]
name = "knowledge_5_prj"
version = "0.1.0"
description = "knowledge-5-prj using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
kickoff = "knowledge_5_prj.main:kickoff"
plot = "knowledge_5_prj.main:plot"
kn = "knowledge_5_prj.main1:my_knowledge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
